--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lacondesa">
+   <uses-permission android:name="android.permission.CAMERA" />
    <application
         android:label="lacondesa"
         android:usesCleartextTraffic="true"
