--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   image_picker: ^0.7.2
   fluttertoast: ^7.1.8
   flutter_multi_formatter: ^1.3.6
+  provider: ^5.0.0
+  shared_preferences: ^2.0.4
+  barcode_scan: ^3.0.1
 
 dev_dependencies:
   flutter_test:
