--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.lacondesa">
    <uses-permission android:name="android.permission.CAMERA" />
    <application
-        android:label="lacondesa"
+        android:label="La condesa"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/launcher_icon">
         <activity
