--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   badges: ^1.2.0
   http: ^0.13.0
   image_picker: ^0.7.2
+  rive: ^0.6.8
+  flutter_svg: ^0.19.3
   fluttertoast: ^7.1.8
   flutter_multi_formatter: ^1.3.6
   provider: ^5.0.0
