lacondesa mode release

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lacondesa">
    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="La condesa"
         android:usesCleartextTraffic="true"
+        android:requestLegacyExternalStorage="false"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
