--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,12 @@ dependencies:
   auto_size_text: ^2.1.0
   badges: ^1.2.0
   http: ^0.13.0
-  image_picker: ^0.7.2
+  image_picker: ^0.7.3
   rive: ^0.6.8
   flutter_svg: ^0.19.3
-  fluttertoast: ^7.1.8
   flutter_multi_formatter: ^1.3.6
-  provider: ^5.0.0
-  shared_preferences: ^2.0.4
+  provider: ^4.3.3
+  shared_preferences: 2.0.5
   barcode_scan: ^3.0.1
 
 dev_dependencies:
