--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   animated_bottom_navigation_bar: ^0.2.1
   line_icons: ^1.3.2
   auto_size_text: ^2.1.0
-  badges: ^1.2.0
+  cached_network_image: ^2.5.1
   http: ^0.13.0
   image_picker: ^0.7.3
   rive: ^0.6.8
