--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^4.3.3
   shared_preferences: 2.0.5
   qr_code_scanner: ^0.3.5
+  async: ^2.5.0
 
 dev_dependencies:
   flutter_test:
