--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: 2.0.5
   qr_code_scanner: ^0.3.5
   async: ^2.5.0
+  modal_bottom_sheet: ^2.0.0
 
 dev_dependencies:
   flutter_test:
