--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   qr_code_scanner: ^0.3.5
   async: ^2.5.0
   modal_bottom_sheet: ^2.0.0
+  vibration: ^1.7.3
 
 dev_dependencies:
   flutter_test:
