--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   async: ^2.5.0
   modal_bottom_sheet: ^2.0.0
   vibration: ^1.7.3
+  qr_utils: ^0.1.5
 
 dev_dependencies:
   flutter_test:
