--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_multi_formatter: ^1.3.6
   provider: ^4.3.3
   shared_preferences: 2.0.5
-  qr_code_scanner: ^0.3.5
+  #qr_code_scanner: ^0.3.5
   async: ^2.5.0
   modal_bottom_sheet: ^2.0.0
   vibration: ^1.7.3
