--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -18,31 +18,30 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.2.5+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  animated_bottom_navigation_bar: ^0.2.1
-  line_icons: ^1.3.2
-  auto_size_text: ^2.1.0
-  cached_network_image: ^2.5.1
+  animated_bottom_navigation_bar: ^0.3.2
+  line_icons: ^2.0.1
+  auto_size_text: ^3.0.0
+  cached_network_image: ^3.2.0
   http: ^0.13.0
-  image_picker: ^0.7.3
-  rive: ^0.6.8
-  flutter_svg: ^0.19.3
-  flutter_multi_formatter: ^1.3.6
-  provider: ^4.3.3
-  shared_preferences: 2.0.5
+  image_picker: ^0.8.4+6
+  rive: ^0.8.1
+  flutter_svg: ^1.0.3
+  flutter_multi_formatter: ^2.5.1
+  provider: ^6.0.2
+  shared_preferences: ^2.0.13
   #qr_code_scanner: ^0.3.5
   async: ^2.5.0
   modal_bottom_sheet: ^2.0.0
-  vibration: ^1.7.3
+  vibration: ^1.7.4-nullsafety.0
   qr_utils: ^0.1.5
   flutter_barcode_scanner: ^2.0.0
   alert: ^2.0.0
@@ -50,7 +49,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.8.0"
+  flutter_launcher_icons: ^0.9.2
   flutter_native_splash:
 
 flutter_icons:
@@ -67,7 +66,6 @@ flutter_native_splash:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -90,11 +88,11 @@ flutter:
     - family: SFLigera
       fonts:
         - asset: fonts/SourceSansPro-Light.ttf
-         
+
     - family: SFRegular
       fonts:
         - asset: fonts/SourceSansPro-Regular.ttf
-    
+
     - family: SFSemibold
       fonts:
         - asset: fonts/SourceSansPro-SemiBold.ttf
